<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Invite">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/so_invite_a_few_friends"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#2962FF" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerInParent="true"
        android:layout_marginTop="45dp"
        android:text="@string/tell_them_to_enter_your_username_as_a_reference_after_they_set_up_they_re_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#6200EA" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerInParent="true"
        android:layout_marginTop="45dp"
        android:text="@string/your_username_is"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/inviteUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

    <Button
        android:id="@+id/inviteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inviteUsername"
        android:layout_centerInParent="true"
        android:layout_marginTop="45dp"
        android:onClick="inviteView"
        android:text="@string/share" />
</RelativeLayout>